# agentic-go-contributor

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
agentic_go_contributor/: cli.py  llm.py  services.py
agentic_go_contributor/github/: issue_service.py
agentic_go_contributor/graph/: base.py  graph.py  state.py
agentic_go_contributor/graph/nodes/: clone_repo.py  coding_agent.py  fetch_issue.py  human_review.py  issue_analyzer.py  planner.py  repo_explorer.py  validator.py
agentic_go_contributor/prompts/: coding_agent.md  issue_analyzer.md  planner.md
agentic_go_contributor/repository/: clone.py  code_search.py
agentic_go_contributor/review/: ipc.py
agentic_go_contributor/utils/: constants.py  repo_url.py
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/runs/: route.ts
dashboard/app/api/runs/[runId]/: route.ts
dashboard/app/review/[runId]/: page.tsx
dashboard/lib/: runs.ts
docs/: plan.md
etc/: .env.example
